RESOLVED FIXED24651
Skia does not always render text fill/stroke pattern/gradient/color correctly
https://bugs.webkit.org/show_bug.cgi?id=24651
Summary Skia does not always render text fill/stroke pattern/gradient/color correctly
Scott Violet
Reported 2009-03-17 13:12:56 PDT
Skia's text rendering gives preference to the gradient, then the pattern. This is problematic though in that once a gradient has been set the gradient getter always returns non-null. Skia needs to only use the gradient/pattern if the fill/strokecolorspace indicates the gradients/pattern should be used. This can be seen when using the test case LayoutTests/fast/canvas/canvas-text-alignment.html.
Attachments
Fix for 24651 (6.41 KB, patch)
2009-03-17 13:17 PDT, Scott Violet
eric: review+
Scott Violet
Comment 1 2009-03-17 13:17:23 PDT
Created attachment 28697 [details] Fix for 24651
Eric Seidel (no email)
Comment 2 2009-03-17 14:06:36 PDT
Comment on attachment 28697 [details] Fix for 24651 OK.
Eric Seidel (no email)
Comment 3 2009-03-17 15:17:45 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/platform/graphics/GraphicsContext.cpp M WebCore/platform/graphics/GraphicsContext.h M WebCore/platform/graphics/GraphicsContextPrivate.h M WebCore/platform/graphics/skia/SkiaFontWin.cpp Committed r41789
Note You need to log in before you can comment on or make changes to this bug.