2009-03-17  Scott Violet  <sky@google.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24651
        Skia does not always render text fill/stroke pattern/gradient/color correctly

        Changes Skia's font rendering to only render gradient/pattern if current
        color space indicates the gradient/pattern should be used.
        This is covered by LayoutTests/fast/canvas/canvas-text-alignment.html .

        * platform/graphics/GraphicsContext.cpp:
        (WebCore::GraphicsContext::strokeColorSpace):
        (WebCore::GraphicsContext::fillColorSpace):
        * platform/graphics/GraphicsContext.h:
        (WebCore::):
        * platform/graphics/GraphicsContextPrivate.h:
        * platform/graphics/skia/SkiaFontWin.cpp:
        (WebCore::paintSkiaText):

Canonical link: https://commits.webkit.org/33846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41789 268f45cc-cd09-0410-ab3c-d52691b4dbfc