WebCore/platform/graphics/GraphicsContextPrivate.h
@@ -33,18 +33,6 @@
 
 namespace WebCore {
 
-// FIXME: This is a place-holder until we decide to add
-// real color space support to WebCore.  At that time, ColorSpace will be a
-// class and instances will be held  off of Colors.   There will be
-// special singleton Gradient and Pattern color spaces to mark when
-// a fill or stroke is using a gradient or pattern instead of a solid color.
-// https://bugs.webkit.org/show_bug.cgi?id=20558
-    enum ColorSpace {
-        SolidColorSpace,
-        PatternColorSpace,
-        GradientColorSpace
-    };
-
     struct GraphicsContextState {
         GraphicsContextState()
             : textDrawingMode(cTextFill)
